<resources>
    <string name="app_name">My First App</string>

    <string name="column_name">Name:</string>
    <string name="column_description">Description:</string>
    <string name="column_email">E-mail:</string>
    <string name="column_facebook">Facebook:</string>
    <string name="column_website">Website:</string>

    <string name="name">Google Developer Group Cluj-Napoca</string>
    <string name="description">GDG Cluj-Napoca is a group of students passionate about technology. GDG Cluj-Napoca is part of the global GDG communities.</string>
    <string name="email">contact@gdgcluj.ro</string>
    <string name="facebook">https://www.facebook.com/gdgcluj</string>
    <string name="website">http://www.gdgcluj.ro/</string>
</resources>
