<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.imarneanu.android.myfirstapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/logo" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            android:text="@string/column_name"
            android:textStyle="bold" />

        <TextView android:text="@string/name" />

        <TextView
            android:text="@string/column_description"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:text="@string/description" />

        <TextView
            android:text="@string/column_email"
            android:textStyle="bold" />

        <TextView
            android:autoLink="email"
            android:text="@string/email" />

        <TextView
            android:text="@string/column_facebook"
            android:textStyle="bold" />

        <TextView
            android:autoLink="web"
            android:text="@string/facebook" />

        <TextView
            android:text="@string/column_website"
            android:textStyle="bold" />

        <TextView
            android:autoLink="web"
            android:text="@string/website" />
    </GridLayout>

</LinearLayout>